Made changes to the navbar. Made aesthetic changes in main css. Added routes for the resume and contact pages

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,8 +11,19 @@ html, body {
     width: 100%;
 }
 
+#navbar-custom {
+    position:;
+}
+
 .border-solid {
     border: solid;
+}
+
+.flex-col {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 /* Project Boxes Alignment */
