--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,12 @@
 
 {% block content %}
 
-<div class="border-solid full-screen text-center">
-    Introduction HERE
+<div class="border-solid full-screen text-center flex-col">
+    <h1>Hello, I'm Sean!</h1>
+    <p></p>
 </div>
 
-<div class="border-solid full-screen text-center">
+<div id="projects-page" class="border-solid full-screen text-center">
     <div class="project-row">
         <div class="border-solid project-box" style="margin-right: 4%;">
             Project 1
