Main changes include adding links to the footer, embedding my resume, adding a button to download the resume, changing the navbar layout, and slight aesthetic changes in main css.

--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,3 +1,21 @@
-<div class="footer border-solid">
-    FOOTER INFORMATION HERE
+<div class="footer bg-light" style="display: flex;">
+    <div style="width: 50%;">
+
+    </div>
+    <div class="flex-center" style="width: 50%;">
+        <div class="flex-col" style="margin-right: 10%;">
+            <h5>Email</h5>
+            <p>
+                <a href="mailto:seanohioroberts@gmail.com">seanohioroberts@gmail.com</a>
+            </p>
+        </div>
+        <div class="flex-col">
+            <h5>Socials</h5>
+            <p>
+                <a href="https://github.com/SeanFromOhio" target="_blank" style="margin-right: 10px;"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/sean-roberts-ohio95/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            </p>
+        </div>
+
+    </div>
 </div>
