--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -6,16 +6,16 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">About Me</a>
+        <a class="nav-link" href="/">About Me</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#projects-page">Projects</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Resume</a>
+        <a class="nav-link" href="/resume">Resume</a>
       </li>
       <li>
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="/contact">Contact</a>
       </li>
     </ul>
   </div>
