--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,6 +2,7 @@ html, body {
     padding: 0px;
     margin: 0px;
     height: 100%;
+    background: #d9e4dd;
 }
 
 .full-screen {
@@ -26,6 +27,12 @@ html, body {
     flex-direction: column;
 }
 
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* Project Boxes Alignment */
 .project-row {
     display: flex;
@@ -37,12 +44,18 @@ html, body {
 
 .project-box {
     width: 40%;
+    background: #fbf7f0;
 }
 
 /* ---------------------- */
 
 .footer {
     width: 100%;
-    height: 125px;
+    height: 100px;
+    color: #555555;
+}
+
+.custom-button {
+    border-radius: 20px;
 }
 
