--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,6 +2,39 @@
 
 {% block content %}
 <div class="full-screen flex-col">
-    contact page
+    <div class="flex-center border-solid" style="width: 50%;">
+        <div style="width: 25%;">
+            <h1>Contact<br> Me!</h1>
+        </div>
+        <div style="width: 25%;">
+            <p>Thanks for taking the time to learn more about me. I'd love to hear from you!</p>
+        </div>
+    </div>
+    <div class="bg-light text-center" style="width: 50%; height: 57%;">
+
+        <form action="" method="POST" style="padding: 5px;">
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="name">Name *</label>
+                    <input class="form-control" name="name" id="name" type="text" required>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="email">Email *</label>
+                    <input class="form-control" name="email" id="email" type="email" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="subject">Subject *</label>
+                <input class="form-control" name="subject" id="subject" type="text" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Message *</label>
+                <textarea class="form-control" name="message" id="message" rows="4" required>
+                </textarea>
+            </div>
+            <button type="submit" class="btn btn-primary" style="width: 100%;">Send</button>
+        </form>
+
+    </div>
 </div>
 {% endblock content %}
