--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -9,7 +9,7 @@
         <a class="nav-link" href="/">About Me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#projects-page">Projects</a>
+        <a class="nav-link" href="/#projects-page">Projects</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/resume">Resume</a>
