--- a/templates/resume.html
+++ b/templates/resume.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 <div class="full-screen flex-col" style="padding: 2%; height: 165%;">
-    <h2>Resume // <a class="btn btn-dark custom-button" href="#" download>Download Resume</a></h2>
+    <h2>Resume // <a class="btn btn-dark custom-button"
+                     href="{{ url_for('static', filename='doc/Technical Interview V1.0.pdf') }}"
+                     target="_blank">Download Resume</a>
+    </h2>
     <iframe
             src="https://docs.google.com/document/d/e/2PACX-1vRAxb2so_Vgh_HdBMbE7O0aVvolVvluJ9s9oXE3Wf0peJFNm0O3se8uD6NDtv2iFtjQANSiwhBk43ZH/pub?embedded=true"
             style="width: 60%; height: 91%;"
