--- a/templates/index.html
+++ b/templates/index.html
@@ -2,27 +2,99 @@
 
 {% block content %}
 
-<div class="border-solid full-screen text-center flex-col">
+<div id="intro-bg" class="border-solid full-screen text-center flex-col">
     <h1>Hello, I'm Sean!</h1>
     <p></p>
 </div>
 
 <div id="projects-page" class="border-solid full-screen text-center">
     <div class="project-row">
-        <div class="border-solid project-box" style="margin-right: 4%;">
-            Project 1
+        <!-- PROJECT 1 -->
+        <div class="border-solid project-box flex-center" style="margin-right: 4%;">
+            <div class="project-text flex-col">
+                <div>
+                    <h3 style="font-type: cambria">Project 1</h3>
+                    <p style="margin: 0;"><b><u>Description:</u></b></p>
+                    <p>Add description...</p>
+
+                    <p style="margin: 0;"><b><u>Technologies:</u></b></p>
+                    <p>Python, ...</p>
+                    <div>
+                        <a class="btn btn-dark custom-button" target="_blank"
+                           href="#">Live Demo</a>
+                        <a class="btn btn-dark custom-button" target="_blank"
+                           href="#">Code</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project-pic" id="project1" style="height: 100%;" >
+            </div>
         </div>
-        <div class="border-solid project-box">
-            Project 2
+        <!-- PROJECT 2 -->
+        <div class="border-solid project-box flex-center">
+            <div class="project-text flex-col">
+                <div>
+                    <h3 style="font-type: cambria">Project 2</h3>
+                    <p style="margin: 0;"><b><u>Description:</u></b></p>
+                    <p>Add description...</p>
+
+                    <p style="margin: 0;"><b><u>Technologies:</u></b></p>
+                    <p>Python, ...</p>
+                    <div>
+                        <a class="btn btn-dark custom-button" target="_blank"
+                           href="#">Live Demo</a>
+                        <a class="btn btn-dark custom-button" target="_blank"
+                           href="#">Code</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project-pic" id="project2" style="height: 100%;" >
+            </div>
         </div>
     </div>
 
     <div class="project-row">
-        <div class="border-solid project-box" style="margin-right: 4%;">
-            Project 3
+        <!-- PROJECT 3 -->
+        <div class="border-solid project-box flex-center" style="margin-right: 4%;">
+            <div class="project-text flex-col">
+                <div>
+                    <h3 style="font-type: cambria">Swerl Expense Tracker</h3>
+                    <p style="margin: 0;"><b><u>Description:</u></b></p>
+                    <p>Add description...</p>
+
+                    <p style="margin: 0;"><b><u>Technologies:</u></b></p>
+                    <p>Python, Django, Javascript (small scripts), HTML5, CSS3, Plotly, Pandas (lib)</p>
+                    <div>
+                        <a class="btn btn-dark custom-button" target="_blank"
+                           href="#">Live Demo</a>
+                        <a class="btn btn-dark custom-button" target="_blank"
+                           href="https://github.com/SeanFromOhio/Swerl-Expense-Tracker">Code</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project-pic" id="pic-swerl" style="height: 100%;" >
+            </div>
         </div>
-        <div class="border-solid project-box">
-            Project 4
+        <!-- PROJECT 4 -->
+        <div class="border-solid project-box flex-center">
+            <div class="project-text flex-col">
+                <div>
+                    <h3 style="font-type: cambria">WeatherMusic</h3>
+                    <p style="margin: 0;"><b><u>Description:</u></b></p>
+                    <p>A fun way of combining current local weather conditions with music.</p>
+
+                    <p style="margin: 0;"><b><u>Technologies:</u></b></p>
+                    <p>Python, Flask, Javascript (+ AJAX), HTML5, CSS3, Google APIs, NWS API</p>
+                    <div>
+                        <a class="btn btn-dark custom-button" target="_blank"
+                           href="https://weather-music-flask.herokuapp.com/">Live Demo</a>
+                        <a class="btn btn-dark custom-button" target="_blank"
+                           href="https://github.com/SeanFromOhio/weather-music-flask">Code</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project-pic" id="pic-wxmusic" style="height: 100%;" >
+            </div>
         </div>
     </div>
 </div>
