--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,17 +2,12 @@
 
 {% block content %}
 <div class="full-screen flex-col">
-    <div class="flex-center border-solid" style="width: 50%;">
-        <div style="width: 25%;">
-            <h1>Contact<br> Me!</h1>
-        </div>
-        <div style="width: 25%;">
-            <p>Thanks for taking the time to learn more about me. I'd love to hear from you!</p>
-        </div>
+    <div class="flex-col" style="width: 50%;">
+        <h1>Looking forward to hearing from you</h1>
+        <br>
     </div>
-    <div class="bg-light text-center" style="width: 50%; height: 57%;">
-
-        <form action="" method="POST" style="padding: 5px;">
+    <div class="bg-light text-center" style="width: 50%; max-height: 57%;">
+        <form action="" method="POST" class="bg-light" style="padding: 5px;">
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="name">Name *</label>
