Added appropriate titles per page. Adjusted the index page project layout, and added some additional functionality to the project boxes.

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,41 +10,22 @@
 <div id="projects-page" class="border-solid full-screen text-center">
     <div class="project-row">
         <!-- PROJECT 1 -->
-        <div class="border-solid project-box flex-center" style="margin-right: 4%;">
-            <div class="project-text flex-col">
-                <div>
-                    <h3 style="font-type: cambria">Project 1</h3>
-                    <p style="margin: 0;"><b><u>Description:</u></b></p>
-                    <p>Add description...</p>
-
-                    <p style="margin: 0;"><b><u>Technologies:</u></b></p>
-                    <p>Python, ...</p>
-                    <div>
-                        <a class="btn btn-dark custom-button" target="_blank"
-                           href="#">Live Demo</a>
-                        <a class="btn btn-dark custom-button" target="_blank"
-                           href="#">Code</a>
-                    </div>
-                </div>
-            </div>
-            <div class="project-pic" id="project1" style="height: 100%;" >
-            </div>
-        </div>
-        <!-- PROJECT 2 -->
         <div class="border-solid project-box flex-center">
             <div class="project-text flex-col">
                 <div>
-                    <h3 style="font-type: cambria">Project 2</h3>
+                    <h3 style="font-type: cambria">Sorting Algo Visualizer</h3>
                     <p style="margin: 0;"><b><u>Description:</u></b></p>
-                    <p>Add description...</p>
+                    <p>
+                        A helpful educational tool to see the inner workings of the four most iconic sorting algorithms.
+                    </p>
 
                     <p style="margin: 0;"><b><u>Technologies:</u></b></p>
-                    <p>Python, ...</p>
+                    <p>Python, Tkinter, Ttk (styling)</p>
                     <div>
                         <a class="btn btn-dark custom-button" target="_blank"
-                           href="#">Live Demo</a>
+                           href="#">Video Demo</a>
                         <a class="btn btn-dark custom-button" target="_blank"
-                           href="#">Code</a>
+                           href="https://github.com/SeanFromOhio/Tkinter-Sorting-Algo_Visualizer">Code</a>
                     </div>
                 </div>
             </div>
@@ -54,13 +35,13 @@
     </div>
 
     <div class="project-row">
-        <!-- PROJECT 3 -->
+        <!-- PROJECT 2 -->
         <div class="border-solid project-box flex-center" style="margin-right: 4%;">
             <div class="project-text flex-col">
                 <div>
                     <h3 style="font-type: cambria">Swerl Expense Tracker</h3>
                     <p style="margin: 0;"><b><u>Description:</u></b></p>
-                    <p>Add description...</p>
+                    <p>Expense tracking made easy, with a variety of tools to take control of your finances.</p>
 
                     <p style="margin: 0;"><b><u>Technologies:</u></b></p>
                     <p>Python, Django, Javascript (small scripts), HTML5, CSS3, Plotly, Pandas (lib)</p>
@@ -75,7 +56,7 @@
             <div class="project-pic" id="pic-swerl" style="height: 100%;" >
             </div>
         </div>
-        <!-- PROJECT 4 -->
+        <!-- PROJECT 3 -->
         <div class="border-solid project-box flex-center">
             <div class="project-text flex-col">
                 <div>
