--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %} Resume {% endblock title %}
+
 {% block content %}
 <div class="full-screen flex-col" style="padding: 2%; height: 165%;">
     <h2>Resume // <a class="btn btn-dark custom-button"
@@ -8,7 +10,7 @@
     </h2>
     <iframe
             src="https://docs.google.com/document/d/e/2PACX-1vRAxb2so_Vgh_HdBMbE7O0aVvolVvluJ9s9oXE3Wf0peJFNm0O3se8uD6NDtv2iFtjQANSiwhBk43ZH/pub?embedded=true"
-            style="width: 60%; height: 91%;"
+            style="width: 61%; height: 91%; border: solid;"
     >
     </iframe>
 </div>
