--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %} Contact {% endblock title %}
+
 {% block content %}
 <div class="full-screen flex-col">
     <div class="flex-col" style="width: 50%;">
