--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,10 @@
                     </div>
                 </div>
             </div>
-            <div class="project-pic" id="project2" style="height: 100%;" >
+            <div class="project-pic" id="project2" style="height: 100%;">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#video_demo_modal">
+                    <i class="fas fa-play"></i>
+                </button>
             </div>
         </div>
     </div>
@@ -47,7 +50,7 @@
                     <p>Python, Django, Javascript (small scripts), HTML5, CSS3, Plotly, Pandas (lib)</p>
                     <div>
                         <a class="btn btn-dark custom-button" target="_blank"
-                           href="#">Live Demo</a>
+                           href="https://swerl.herokuapp.com/">Live Demo</a>
                         <a class="btn btn-dark custom-button" target="_blank"
                            href="https://github.com/SeanFromOhio/Swerl-Expense-Tracker">Code</a>
                     </div>
@@ -75,6 +78,37 @@
                 </div>
             </div>
             <div class="project-pic" id="pic-wxmusic" style="height: 100%;" >
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="video_demo_modal" tabindex="-1" role="dialog"
+     aria-labelledby="SA_video_modal_center" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="SA_video_modal">Sorting Algorithm Video Demo</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <!-- Video -->
+            <div class="modal-body">
+                <div class="flex-center">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/v2BTLCt6xOI" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+                                 picture-in-picture"
+                                allowfullscreen>
+                    </iframe>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <a type="button" class="btn btn-primary" target="_blank"
+                   href="https://github.com/SeanFromOhio/Tkinter-Sorting-Algo_Visualizer"> Code
+                </a>
             </div>
         </div>
     </div>
