--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,8 +8,8 @@
         <h1>Looking forward to hearing from you</h1>
         <br>
     </div>
-    <div class="bg-light text-center" style="width: 50%; max-height: 57%;">
-        <form action="" method="POST" class="bg-light" style="padding: 5px;">
+    <div class="bg-dark text-center" style="width: 50%; max-height: 57%;">
+        <form action="" method="POST" class="bg-black" style="padding: 5px;">
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="name">Name *</label>
