--- a/templates/index.html
+++ b/templates/index.html
@@ -2,21 +2,21 @@
 
 {% block content %}
 
-<div id="intro-bg" class="full-screen" style="display: flex;">
-    <div style="width: 45%; display: flex; justify-content: center; flex-direction: column;">
+<div id="intro-bg" style="display: flex;">
+    <div class="flex-col-just" style="width: 45%;">
         <h1 style="font-size: 1000%;">Hello,</h1>
-        <h1 style="font-size: 1000%;">I'm Sean!</h1>
+        <h3 style="font-size: 1000%;">I'm Sean!</h3>
     </div>
 
     <div style="width: 10%; display: flex; align-items: center; flex-direction: column;">
         <div class="shape-triangle"></div>
-        <a href="#projects-page" type="button" class="btn" style="position: absolute; bottom: -55px;">
+        <a href="#projects-page" type="button" class="btn" style="position: absolute; bottom: 1px;">
             <i class="fas fa-hand-point-down fa-lg" style="color: white;"></i>
         </a>
     </div>
 
-    <div style="width: 45%; display: flex; justify-content: center; flex-direction: column;">
-        <h2 class="text-center" style="margin-left: 25%; background: white; color: #292b2c; padding: 10px; border-radius: 40px; margin-right: 5%;">
+    <div class="flex-col-just" style="width: 45%;">
+        <h2 class="text-center" id="intro-description-text">
             A recent graduate with a new found aspiration of becoming a software developer, and
             an eagerness to continue to learn more. I believe the overcoming of challenges is the best way to do so.
         </h2>
@@ -42,7 +42,7 @@
                 </div>
 
                 <!-- Back side of card -->
-                <div class="flip-card-back">
+                <div class="flip-card-back flex-col-just" style="justify-content: space-between;">
                     <!-- Text -->
                     <h2><b>Sorting Algo Visualizer</b></h2>
                     <h4 style="margin: 0;"><u>Description:</u></h4>
@@ -82,7 +82,7 @@
                 </div>
 
                 <!-- Back side of card -->
-                <div class="flip-card-back">
+                <div class="flip-card-back flex-col-just" style="justify-content: space-between;">
                     <!-- Text -->
                     <h2><b>Swerl Expense Tracker</b></h2>
                     <h4 style="margin: 0;"><u>Description:</u></h4>
@@ -113,7 +113,7 @@
                 </div>
 
                 <!-- Back side of card -->
-                <div class="flip-card-back">
+                <div class="flip-card-back flex-col-just" style="justify-content: space-between;">
                     <!-- Text -->
                     <h2><b>WeatherMusic</b></h2>
                     <h4 style="margin: 0;"><u>Description:</u></h4>
