Added a page header on the projects page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,12 @@
 <div id="projects-page" class="full-screen text-center">
     <!-- Row 1 -->
     <div class="project-row">
+        <div class="project-box flex-center" style="margin-right: 4%; background: transparent;">
+            <h1 style="font-size: 450%; font-weight: bold; width: 100%; text-align: right;">
+                Highlighted Projects
+            </h1>
+        </div>
+
         <!-- PROJECT 1 -->
         <div class="gradient-border project-box flex-center flip-card">
             <div class="flex-col flip-card-inner">
