Added a card to the landing page banner to breakup that page a bit, as well as making it easier for me to include a brief description about myself. Also added more links to my socials, and adjusted the colors of them to be black instead of hyperlink blue.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -63,7 +63,7 @@ html, body {
     color: white;
     padding: 10px;
     border-radius: 40px;
-    margin-right: 5%;
+    margin-right: ;
 }
 
 /* Project Boxes Alignment */
