--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div id="intro-bg" style="display: flex;">
-    <div class="flex-col-just" style="width: 45%;">
+    <div class="flex-col-just text-center" style="width: 45%;">
         <h1 style="font-size: 1000%;">Hello,</h1>
         <h3 style="font-size: 1000%;">I'm Sean!</h3>
     </div>
@@ -15,11 +15,23 @@
         </a>
     </div>
 
-    <div class="flex-col-just" style="width: 45%;">
-        <h2 class="text-center" id="intro-description-text">
-            A recent graduate with a new found aspiration of becoming a software developer, and
-            an eagerness to continue to learn more. I believe the overcoming of challenges is the best way to do so.
-        </h2>
+    <div class="flex-center" style="width: 45%;">
+        <div class="card flex-col" style="width: 50%;">
+            <img class="card-img-top" src="/static/images/rsz_portfolio_project_headshot.png"
+                 alt="headshot img" style="height: 50%; width: 50%; border-radius: 50%; margin-top: 10px;">
+            <div class="card-body flex-col" style="justify-content: space-between">
+                <h4 class="text-center" style="font-family: Raleway; color: black;">
+                    A recent graduate from Columbus, Ohio with a new found passion for software development.
+                </h4>
+                <p>
+                    <a href="https://github.com/SeanFromOhio" target="_blank" style="margin-right: 10px;">
+                        <i class="fab fa-github fa-lg" style="color: black;"></i></a>
+                    <a href="https://www.linkedin.com/in/sean-roberts-ohio95/" target="_blank">
+                        <i class="fab fa-linkedin fa-lg" style="color: black;"></i></a>
+                </p>
+            </div>
+        </div>
+
     </div>
 
 </div>
