--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -6,14 +6,18 @@
         <div class="flex-col" style="margin-right: 10%;">
             <h5>Email</h5>
             <p>
-                <a href="mailto:seanohioroberts@gmail.com">seanohioroberts@gmail.com</a>
+                <a href="mailto:seanohioroberts@gmail.com" style="color: black;">seanohioroberts@gmail.com</a>
             </p>
         </div>
         <div class="flex-col">
             <h5>Socials</h5>
             <p>
-                <a href="https://github.com/SeanFromOhio" target="_blank" style="margin-right: 10px;"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/sean-roberts-ohio95/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/SeanFromOhio" target="_blank" style="margin-right: 10px;">
+                    <i class="fab fa-github" style="color: black;"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/sean-roberts-ohio95/" target="_blank">
+                    <i class="fab fa-linkedin" style="color: black;"></i>
+                </a>
             </p>
         </div>
 
