Slight font changes and font-weight changes. Ready to be pushed to github.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,6 +10,10 @@ html, body {
     scroll-behavior: smooth;
 }
 
+.font-Raleway {
+    font-family: Raleway;
+}
+
 .full-screen {
     padding: 0px;
     margin: 0px;
