--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,9 +3,9 @@
 {% block title %} Contact {% endblock title %}
 
 {% block content %}
-<div class="full-screen flex-col">
+<div class="full-screen flex-col font-Raleway">
     <div class="flex-col" style="width: 50%;">
-        <h1>Looking forward to hearing from you</h1>
+        <h1><b>Looking forward to hearing from you</b></h1>
         <br>
     </div>
     <div class="bg-dark text-center" style="width: 50%; max-height: 57%;">
