--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 <div id="intro-bg" style="display: flex;">
-    <div class="flex-col-just text-center" style="width: 45%;">
-        <h1 style="font-size: 1000%;">Hello,</h1>
+    <div class="flex-col-just text-center" style="width: 45%; text-align: right;">
+        <h1 style="font-size: 1000%; text-align: right;">Hello,</h1>
         <h3 style="font-size: 1000%;">I'm Sean!</h3>
     </div>
 
@@ -20,7 +20,7 @@
             <img class="card-img-top" src="/static/images/rsz_portfolio_project_headshot.png"
                  alt="headshot img" style="height: 50%; width: 50%; border-radius: 50%; margin-top: 10px;">
             <div class="card-body flex-col" style="justify-content: space-between">
-                <h4 class="text-center" style="font-family: Raleway; color: black;">
+                <h4 class="text-center font-Raleway" style="color: black;">
                     A recent graduate from Columbus, Ohio with a new found passion for software development.
                 </h4>
                 <p>
