Added my name to all page titles

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
           type="image/x-icon"
     >
 
-    <title>{% block title%} Home {% endblock title%}</title>
+    <title>Sean R | {% block title%} Home {% endblock title%}</title>
 </head>
 
 <body>
