Rounded send button on constact page

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,7 +29,7 @@
                 <textarea class="form-control" name="message" id="message" rows="4" required>
                 </textarea>
             </div>
-            <button type="submit" class="btn btn-primary" style="width: 100%;">Send</button>
+            <button type="submit" class="btn btn-primary custom-button" style="width: 100%;">Send</button>
         </form>
 
     </div>
