Took out sensitive gmail info, and set environmental variables. Some gramatical fixes on the index page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <div id="intro-bg" style="display: flex;">
     <div class="flex-col-just text-center" style="width: 45%; text-align: right;">
         <h1 style="font-size: 1000%; text-align: right;">Hello,</h1>
-        <h3 style="font-size: 1000%;">I'm Sean!</h3>
+        <h3 style="font-size: 1000%; text-align: right;">I'm Sean!</h3>
     </div>
 
     <div style="width: 10%; display: flex; align-items: center; flex-direction: column;">
@@ -21,7 +21,7 @@
                  alt="headshot img" style="height: 50%; width: 50%; border-radius: 50%; margin-top: 10px;">
             <div class="card-body flex-col" style="justify-content: space-between">
                 <h4 class="text-center font-Raleway" style="color: black;">
-                    A recent graduate from Columbus, Ohio with a new found passion for software development.
+                    A recent graduate from Columbus, Ohio with a newfound passion for software development.
                 </h4>
                 <p>
                     <a href="https://github.com/SeanFromOhio" target="_blank" style="margin-right: 10px;">
@@ -135,7 +135,7 @@
                     <!-- Text -->
                     <h2><b>WeatherMusic</b></h2>
                     <h4 style="margin: 0;"><u>Description:</u></h4>
-                    <p>A fun way of combining current local weather conditions with music.</p>
+                    <p>A fun way of combining local weather conditions with music.</p>
 
                     <h4 style="margin: 0;"><u>Technologies:</u></h4>
                     <p>Python, Flask, Javascript (+ AJAX), HTML5, CSS3, Google APIs, NWS API</p>
